# ECE461_Team19_CLI

./: .gitignore  Cargo.toml  README.md  SampleUrlFile.txt  metrics.ndjson  out  run  test.txt
src/: file_parser.rs  main.rs  metrics.rs  req.rs
src/metrics/: github.rs  npm.rs
tests/: cli.rs  url.txt
